--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoMigrarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoMigrarRegistros.cshtml
@@ -1,11 +1,90 @@
-﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.Helpers.Response>
+﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.ViewModels.ResponseObligacion>
 
-@foreach (var result in Model)
+@foreach (var response in Model)
 {
-    <div class="card-body">
-        <h5 class="card-title">Resultado: @result.CurrentID</h5>
-        <div class="card-text alert alert-@result.Color">@Html.Raw(result.Message)</div>
-    </div>
+    var resultObl = Json.Decode(response.Obligacion.Message);
 
+<div class="row">
+
+    @foreach (var itemObl in resultObl)
+    {
+        if (itemObl["Type"] == "summary")
+        {
+            <div class="col-sm-12">
+                <div class="card text-white bg-info my-3">
+                    <div class="card-header"><strong>@itemObl["Title"]</strong></div>
+                    <div class="card-body">
+                        <p class="card-text h5">@itemObl["Value"]</p>
+                    </div>
+                </div>
+            </div>
+        }
+        else if (itemObl["Type"] == "detail")
+        {
+            <div class="col-sm-2 col-sm-4">
+                <div class="card text-white bg-@response.Obligacion.Color my-3">
+                    <div class="card-header"><strong>@itemObl["Title"]</strong></div>
+                    <div class="card-body">
+                        <p class="card-text h5">@itemObl["Value"]</p>
+                    </div>
+                </div>
+            </div>
+        }
+        else if (itemObl["Type"] == "error")
+        {
+            <div class="col-sm-12">
+                <div class="card text-white bg-@response.Obligacion.Color my-3">
+                    <div class="card-header"><strong>@itemObl["Title"]</strong></div>
+                    <div class="card-body">
+                        <p class="card-text h5">@itemObl["Value"]</p>
+                    </div>
+                </div>
+            </div>
+        }
+    }
+
+    @foreach (var item in response.DetalleObligacion)
+    {
+        var resultDet = Json.Decode(item.Message);
+
+        foreach (var itemDet in resultDet)
+        {
+            if (itemDet["Type"] == "summary")
+            {
+                <div class="col-sm-12">
+                    <div class="card text-white bg-info my-3">
+                        <div class="card-header"><strong>@itemDet["Title"]</strong></div>
+                        <div class="card-body">
+                            <p class="card-text h5">@itemDet["Value"]</p>
+                        </div>
+                    </div>
+                </div>
+            }
+            else if (itemDet["Type"] == "detail")
+            {
+                <div class="col-sm-2 col-sm-4">
+                    <div class="card text-white bg-@item.Color my-3">
+                        <div class="card-header"><strong>@itemDet["Title"]</strong></div>
+                        <div class="card-body">
+                            <p class="card-text h5">@itemDet["Value"]</p>
+                        </div>
+                    </div>
+                </div>
+            }
+            else if (itemDet["Type"] == "error")
+            {
+                <div class="col-sm-12">
+                    <div class="card text-white bg-@item.Color my-3">
+                        <div class="card-header"><strong>@itemDet["Title"]</strong></div>
+                        <div class="card-body">
+                            <p class="card-text h5">@itemDet["Value"]</p>
+                        </div>
+                    </div>
+                </div>
+            }
+        }
+    }
+
+    </div>
 }
 
