--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_Editar.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Estudiante/_Editar.cshtml
@@ -57,7 +57,11 @@
             <div class="form-row">
                 @Html.Label("Sexo", new { @class = "col-md-3 col-form-label" })
                 <div class="col-md-4">
-                    @Html.TextBoxFor(model => model.C_Sexo, new { @class = "form-control" })
+                    <select class="form-control" id="cbo-sexo" name="C_Sexo">
+                        <option value="">[ SELECCIONAR ]</option>
+                        <option value="F">FEMENINO</option>
+                        <option value="M">MASCULINO</option>
+                    </select>
                     <p class="text-danger small">@Html.ValidationMessageFor(model => model.C_Sexo)</p>
                 </div>
             </div>
@@ -111,14 +115,18 @@
             <div class="form-row">
                 <div class="form-group offset-sm-4 col-sm-3">
                     <div class="form-check">
-                        @Html.CheckBoxFor(model => model.B_Correcto, new { @class = "form-check-input" })
-                        @Html.Label("Omitir validación", new { @for = "B_Correcto", @class = "col-check-label" })
+                        <label for="B_Correcto" class="col-check-label">
+                            @Html.CheckBoxFor(model => model.B_Correcto, new { @class = "form-check-input" })
+                            Omitir validación
+                        </label>
                     </div>
                 </div>
                 <div class="form-group col-sm-3">
                     <div class="form-check">
-                        @Html.CheckBoxFor(model => model.B_Removido, new { @class = "form-check-input" })
-                        @Html.Label("Remover registro", new { @for = "B_Removido", @class = "col-check-label" })
+                        <label for="B_Removido" class="col-check-label">
+                            @Html.CheckBoxFor(model => model.B_Removido, new { @class = "form-check-input" })
+                            Remover registro
+                        </label>
                     </div>
                 </div>
             </div>
@@ -157,6 +165,15 @@
         $('#cbo-procedencia option[value=""]').prop('selected', true)
     }
 
+    if ('@Model.C_Sexo' === 'M') {
+        $('#cbo-sexo option[value=M]').prop('selected', true)
+    }
+    else if ('@Model.C_Sexo' === 'F') {
+        $('#cbo-sexo option[value=F]').prop('selected', true)
+    }
+    else {
+        $('#cbo-sexo option[value=]').prop('selected', true)
+    }
 
     $("form").submit(function () {
         if (parseInt($("#submited").val()) > 0) {
