--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
@@ -1,5 +1,7 @@
 ﻿@model IEnumerable<WebMigradorCtasPorCobrar.Models.Helpers.Response>
-
+@{ 
+    string proc = ViewBag.Procedencia;
+}
 
 <div class="col-12">
     <div class="row">
@@ -9,9 +11,10 @@
                 <div class="card text-white bg-@response.Color my-3">
                     <div class="card-header">
                         <strong>@response.CurrentID</strong>
-                        <a class="pull-right btn btn-sm btn-secondary-outline validate" data-obs="@response.Redirect" href="@Url.Action(response.Action, response.Controller, new { id = response.Redirect })">
+                        <button class="pull-right btn btn-sm btn-outline-secondary validate" data-obs="@response.Redirect" 
+                           data-url="@Url.Action(response.Action, response.Controller, new { procedencia = proc, observacionId = response.Redirect })">
                             <i class="fa fa-refresh"></i>
-                        </a>
+                        </button>
                     </div>
                     <div class="card-body" id="result_body_@response.Redirect">
                         <h5 class="card-title">@response.ObjMessage.Title</h5>
@@ -28,26 +31,20 @@
 
     $('.validate').on('click', function () {
         debugger
-        let urlValidate = $(this).attr('href');
+        let urlValidate = $(this).data('url');
         let obs = $(this).data('obs');
         $.ajax({
             url: urlValidate,
             type: 'POST',
             cache: false,
             beforeSend: function () {
-                $('#result_body_' + obs).show();
-                $('#result-message').hide();
+                $('#result_validation_' + obs).html('<div class="row"><p class="text-center"><i class="fa fa-spin fa-cog"></i></p></div>');
             },
             success: function (data) {
-                $('#result-message').html(data);
+                $('#result_validation_' + obs).html(data);
             },
             error: function (jqXHR, textStatus, errorThrown) {
-                $('#alert-message p.alert').html(jqXHR.responseText)
-                $('#result-message').show();
-            },
-            complete: function () {
-                $('#processing').hide();
-                $('#result-message').show();
+                $('#result_validation_' + obs).html('<div><p class="alert alert-danger">' + jqXHR.responseText + '</p></div>');
             }
         });
     })
