--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidacion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidacion.cshtml
@@ -6,10 +6,10 @@
 <div class="card text-white bg-@Model.Color my-3">
     <div class="card-header">
         <strong>@Model.CurrentID</strong>
-        <a class="pull-right btn btn-sm btn-outline-secondary validate" data-obs="@Model.Redirect"
-           href="@Url.Action(Model.Action, Model.Controller, new { procedencia = proc, observacionId = Model.Redirect })">
+        <button class="pull-right btn btn-sm btn-outline-secondary validate" data-obs="@Model.Redirect"
+           data-url="@Url.Action(Model.Action, Model.Controller, new { procedencia = proc, observacionId = Model.Redirect })">
             <i class="fa fa-refresh"></i>
-        </a>
+        </button>
     </div>
     <div class="card-body" id="result_body_@Model.Redirect">
         <h5 class="card-title">@Model.ObjMessage.Title</h5>
