--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoValidarRegistros.cshtml
@@ -4,7 +4,7 @@
 }
 
 <div class="col-12">
-    <div class="row">
+    <div class="row" id="validations">
         @foreach (var response in Model)
         {
             <div class="col-sm-2 col-md-4" id="result_validation_@response.Redirect">
@@ -29,7 +29,7 @@
 
 <script>
 
-    $('.validate').on('click', function () {
+    $('#validations').on('click', '.validate', function () {
         debugger
         let urlValidate = $(this).data('url');
         let obs = $(this).data('obs');
