--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Sidebar.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Sidebar.cshtml
@@ -1,7 +1,8 @@
 ﻿@{ 
-    var con_oblig = WebMigradorCtasPorCobrar.Models.Helpers.TipoAlumno.ConObligaciones;
-    var sin_oblig = WebMigradorCtasPorCobrar.Models.Helpers.TipoAlumno.SinObligaciones;
+    var con_oblig = WebMigradorCtasPorCobrar.Models.Helpers.TipoData.ConObligaciones;
+    var sin_oblig = WebMigradorCtasPorCobrar.Models.Helpers.TipoData.SinObligaciones;
 }
+
 <div class="main-sidebar">
     <ul class="nav side-nav">
         <li class="nav-item"><a href="@Url.Action("Index", "Home")" class="nav-link"><i class="fa fa-fw fa-home"></i> Dashboard</a></li>
