--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_SeleccionPeriodoFase.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_SeleccionPeriodoFase.cshtml
@@ -33,6 +33,7 @@
 
     $('#cbo-periodo').on('change', function () {
         buttonState();
+        $('#result-message').html('');
     })
 
     function buttonState() {
