--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoCopiarRegistros.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoCopiarRegistros.cshtml
@@ -4,7 +4,7 @@
 {
     var result = Json.Decode(response.Message);
 
-    <div class="row">
+    <div class="row mx-2">
 
         @foreach (var item in result)
         {
