--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoMigrarRegistrosObligacion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_ResultadoMigrarRegistrosObligacion.cshtml
@@ -4,7 +4,7 @@
 {
     var resultObl = Json.Decode(response.Obligacion.Message);
 
-<div class="row">
+<div class="row px-2">
 
     @foreach (var itemObl in resultObl)
     {
