--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Home/Index.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Home/Index.cshtml
@@ -1,12 +1,30 @@
-﻿@{
-    ViewBag.Title = "Home Page";
+﻿@using WebMigradorCtasPorCobrar.Models.Helpers
+@{
+    ViewBag.Title = "Dashboard";
 }
 
 <div class="jumbotron">
     <h1>Dashboard</h1>
 </div>
 
-<div class="row">
+<div class="row py-3">
+    <div class="col-12">
+        <h2>Bases de datos</h2>
+    </div>
+    @foreach (var item in ViewBag.Conexiones as IEnumerable<Response>)
+    {
+        <div class="col-sm-3">
+            <div class="card border-@item.Color text-center mb-3">
+                <div class="card-header text-white bg-@item.Color h5">@item.CurrentID</div>
+                <div class="card-body text-@item.Color">
+                    <h5 class="card-title">@item.Message <i class="bi @item.Icon"></i></h5>
+                </div>
+            </div>
+        </div>
+    }
+</div>
+
+<div class="row py-3">
     <div class="col-sm-6">
         <h2>Obligaciones</h2>
         <div class="card">
