--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Posgrado.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Posgrado.cshtml
@@ -31,7 +31,7 @@
         }
         else
         {
-            @Html.Action(action, controller, new { tprocedencia = procedencia_value })
+            @Html.Action(action, controller, new { procedencia = procedencia_value })
         }
     </div>
 </div>
