--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_DatosMigracion.cshtml
@@ -40,9 +40,9 @@
                  .RenderValueAs(model => @Html.Raw($"<a href=\"{ Url.Action("CargarDetalle", "DetalleObligacion", new { id = model.I_RowID, procedencia = str_procedencia, area = "" })}\" class=\"btn btn-xs btn-warning modal-link-lg\">" +
                                                        $"<i class=\"bi-list-check\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Ver detalle</span>" +
                                                    $"</a>"));
-    //columns.Add(c => c.B_ExisteCtas).Css("text-center").Encoded(false).Sanitized(false).Titled("Ctas. Cobrar").Filterable(true)
-    //    .RenderValueAs(model => model.B_ExisteCtas ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
-    //                                               : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
+    columns.Add(c => c.B_ExisteCtas).Css("text-center").Encoded(false).Sanitized(false).Titled("Ctas. Cobrar").Filterable(true)
+        .RenderValueAs(model => model.B_ExisteCtas ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                   : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
     columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrable").Filterable(true)
             .RenderValueAs(model => model.B_Migrable ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
                                                      : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
