--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/_DatosMigracion.cshtml
@@ -33,16 +33,15 @@
         columns.Add(c => c.N_cta_cte).Titled("Nro. Cuenta").Filterable(true);
         columns.Add(c => c.Codigo_bnc).Css("text-center").Titled("Cod. BNC").Filterable(true);
         columns.Add(c => c.Fch_venc).Css("text-center").RenderValueAs(model => model.Fch_venc.ToShortDateString()).Titled("Fec. Venc").Filterable(true);
-        //columns.Add(c => c.Prioridad).Css("text-center").Titled("Prioridad").Filterable(true);
-        //columns.Add(c => c.C_mora).Css("text-center").Encoded(false).Sanitized(false).Titled("Mora").Filterable(true)
-        //        .RenderValueAs(model => model.C_mora ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-info\"></i></span>")
-        //                                             : Html.Raw("<span class=\"h5\"><i class=\"fa fa-minus-circle text-secondary\"></i></span>"));
         columns.Add(c => c.Eliminado).Css("text-center").Encoded(false).Sanitized(false).Titled("Eliminado").Filterable(true)
                 .RenderValueAs(model => model.Eliminado ? Html.Raw("<span class=\"h6\"><i class=\"fa fa-check-circle text-warning\"></i></span>")
                                                         : Html.Raw("<span class=\"h6\"><i class=\"fa fa-minus-circle text-secondary\"></i></span>"));
-        columns.Add(c => c.B_ExisteCtas).Css("text-center").Encoded(false).Sanitized(false).Titled("Ctas. Cobrar").Filterable(true)
+        columns.Add(c => c.B_ExisteCtas).Css("text-center").Encoded(false).Sanitized(false).Titled("Ctas. Proceso").Filterable(true)
                 .RenderValueAs(model => model.B_ExisteCtas ? Html.Raw("<span class=\"h6\"><i class=\"fa fa-check-circle text-success\"></i></span>")
                                                         : Html.Raw("<span class=\"h6\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
+        columns.Add(c => c.I_CtaDepoProID).Css("text-center").Encoded(false).Sanitized(false).Titled("Ctas. CtaDeposito").Filterable(false)
+                .RenderValueAs(model => model.I_CtaDepoProID.HasValue ? Html.Raw("<span class=\"h6\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                                      : Html.Raw("<span class=\"h6\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
         columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrable").Filterable(true)
                 .RenderValueAs(model => model.B_Migrable ? Html.Raw("<span class=\"h6\"><i class=\"fa fa-check-circle text-success\"></i></span>")
                                                          : Html.Raw("<span class=\"h6\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
