--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosConceptoPago.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_DatosConceptoPago.cshtml
@@ -1,7 +1,7 @@
 ﻿@model WebMigradorCtasPorCobrar.Models.ViewModels.ConceptoPagoViewModel
 
 <div class="modal-header">
-    <h5 class="modal-title">Datos de la cuota de pago</h5>
+    <h5 class="modal-title">Datos del concepto de pago</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
     </button>
